--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaccination</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="icon" type="image/png" href="img/icon.png">
 </head>
 <body class="cuerpazo">
     <div class="navegation">
